# learn_fast_api

./: CLAUDE.md  Dockerfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: coverage.yml  lint.yml  pytest_coverage.yml
api/schemas/: task.py
scripts/: check.sh  fix.sh
tests/: test_add.py
