[tool.black]
line-length=120

[tool.isort]
include_trailing_comma = true
line_length = 120
multi_line_output = 3
use_parentheses = true
skip = [".venv/", ".dockervenv/"]

[tool.mypy]
install_types = true
non_interactive = true
# メソッドの型を明示的に書くことを強制する
disallow_untyped_defs = true
disallow_untyped_calls = true

[tool.ruff]
line-length = 120

[project]
name = "learn-fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "fastapi==0.111.1",
    "pydantic==2.8.2",
    "uvicorn==0.30.5",
    "mypy==1.9.0",
    "black==24.10.0",
    "ruff==0.3.4",
    "isort==5.13.2",
    "flake8==7.1.0",
    "boto3==1.35.90",
    "botocore==1.34.154",
    "boto3-stubs==1.34.158",
    "botocore-stubs==1.34.158",
    "sqlalchemy==2.0.31",
    "aiomysql==0.2.0",
    "pip>=24.3.1",
]
