[tool.black]
line-length=120

[tool.mypy]
install_types = true
non_interactive = true
# メソッドの型を明示的に書くことを強制する
disallow_untyped_defs = true
disallow_untyped_calls = true

[tool.ruff]
line-length = 120

[project]
name = "learn-fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "fastapi==0.115.12",
    "pydantic==2.11.2",
    "uvicorn==0.34.3",
    "mypy==1.15.0",
    "black==25.1.0",
    "ruff==0.11.5",
    "boto3==1.34.144",
    "botocore==1.34.154",
    "boto3-stubs==1.34.158",
    "botocore-stubs==1.37.28",
    "sqlalchemy==2.0.40",
    "aiomysql==0.2.0",
    "pip>=24.3.1",
    "types-greenlet>=3.2.0.20250417",
    "types-jmespath>=1.0.2.20240106",
    "types-requests>=2.32.0.20250328",
    "types-ujson>=5.10.0.20250326",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
